# l2-deep-dive-june

./: .env.example  .gitignore  01-openai_demo.ipynb  01-openai_demo.py  02-google_demo.ipynb  03-groq-demo.py  04-openai_langchain_demo.py  05-google_langchain_demo.py  06_init_chat_model_demo.py  07-ollama_langchain_demo.py  08-ollama-stream_langchain_demo.py  09_ollama_batch-langchain_demo.py  10_ollama_user_input_langchain.py  11_huggingface_langchain_demo.py  12_hf_demo_local.ipynb  13_prompt_template_langchain.py  14_prompt_template_lcel.py  15_output_parser_langchain.py  16_langchain_chatprompttemplate.py  17-memory.py  18-chatbot-langchain.py  basic-rag.py  hf_demo_local.ipynb  langchain_chroma.ipynb  main.py  model_selection_guide.html  pyproject.toml  requirements.txt  sampling_parameters_interactive.html
docs/: company_policy.txt
