[project]
name = "l2-deep-dive-june-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.8.0",
    "groq>=1.4.0",
    "openai>=2.41.1",
    "python-certifi-win32>=1.6.1",
    "python-dotenv>=1.2.2",
]
