[project]
name = "l2-deep-dive-june-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.8.0",
    "groq<1.0",
    "huggingface-hub>=1.19.0",
    "langchain>=1.3.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "openai>=2.41.1",
    "python-certifi-win32>=1.6.1",
    "python-dotenv>=1.2.2",
]
